tests/macros/float/mask.stderr
error: option `mask` does not exist for kind `float`
 --> $DIR/mask.rs:2:45
  |
2 |     let q = inquisition::questions![Float { mask: todo!() }];
  |                                             ^^^^
