tests/macros/float/mask.rs
fn main() {
    let q = inquisition::questions![Float { mask: todo!() }];
}
